--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -917,6 +917,18 @@
         }
       },
       {
+        "file": "mianuncio-nuevo-preview.scss",
+        "config": {
+          "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mianuncio-nuevo-preview.css"
+        }
+      },
+      {
+        "file": "mianuncio-ver.scss",
+        "config": {
+          "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mianuncio-ver.css"
+        }
+      },
+      {
         "file": "mis-anuncios.scss",
         "config": {
           "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mis-anuncios.css"
