--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -923,6 +923,12 @@
         }
       },
       {
+        "file": "mianuncio-nuevo.scss",
+        "config": {
+          "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mianuncio-nuevo.css"
+        }
+      },
+      {
         "file": "mianuncio-ver.scss",
         "config": {
           "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mianuncio-ver.css"
