--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -76,6 +76,7 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
+      "reuseConnection": true,
       "connectionType": "ftp",
       "history": []
     },
@@ -908,6 +909,12 @@
         "file": "anuncio-nuevo.scss",
         "config": {
           "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\anuncio-nuevo.css"
+        }
+      },
+      {
+        "file": "inicio.scss",
+        "config": {
+          "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\inicio.css"
         }
       },
       {
