--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -83,6 +83,9 @@
     "packages": {
       "createPackageLock": true
     },
+    "images": {
+      "preserveOriginal": true
+    },
     "tasks": {
       "autoprefixer": {
         "cascade": true,
@@ -947,6 +950,17 @@
         "file": "mis-anuncios.scss",
         "config": {
           "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\mis-anuncios.css"
+        }
+      },
+      {
+        "file": "pulpox.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "customOutput": "C:\\github\\pulpox_ads_nuevo\\assets\\css\\pulpox.css"
         }
       }
     ]
